--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,6 +3,12 @@
     "signInWithGoogle": "Sign in with Google"
   },
 
+  "navigationBar": {
+    "itemTooltip": {
+      "home": "Home"
+    }
+  },
+
   "snackbars": {
     "errorSnackbar": {
       "message": "Something went wrong! Please, try again.",
