--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,6 +9,10 @@
     }
   },
 
+  "dashboard": {
+    "pageTitle": "Dashboard"
+  },
+
   "snackbars": {
     "errorSnackbar": {
       "message": "Something went wrong! Please, try again.",
