generic header and cinfo cards

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,7 +10,24 @@
   },
 
   "dashboard": {
-    "pageTitle": "Dashboard"
+    "pageTitle": "Dashboard",
+    "infoCards": {
+      "income": {
+        "title": "Income"
+      },
+      "expense": {
+        "title": "Expense"
+      },
+      "balance": {
+        "title": "Balance"
+      },
+      "savings": {
+        "title": "Savings"
+      },
+      "freeMoney": {
+        "title": "Free money"
+      }
+    }
   },
 
   "snackbars": {
