--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -106,6 +106,7 @@
 
       "categoryItem": {
         "menu": {
+          "addValue": "Add value",
           "remove": "Remove"
         },
         "confirmationModalRemove": "Do you want to remove <b>{{ categoryName }}</b> category?"
@@ -125,6 +126,14 @@
       "addCategory": "Add category",
       "categoryExistsError": "Such category already exists",
       "categoryNameLengthError": "Max category name length is 25"
+    },
+    "categoryValueModal": {
+      "title": "Add value to category",
+      "cancel": "Cancel",
+      "add": "Add",
+      "valueToAddTitle": "Value to add",
+      "noteTitle": "Note",
+      "noteTooLongError": "Note is too long, max length is 100"
     }
   },
 
@@ -152,11 +161,16 @@
     "categoryRemovedSnackbar": {
       "message": "Category was removed successfully!",
       "buttonText": "Got it"
+    },
+    "categoryValueChangedSnackbar": {
+      "message": "Category value was changed successfully!",
+      "buttonText": "Got it"
     }
   },
 
   "formErrors": {
-    "required": "Field is required"
+    "required": "Field is required",
+    "minValue": "Minimal value is {{ minValue }}"
   },
 
   "confirmationModal": {
