category value change

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -107,9 +107,11 @@
       "categoryItem": {
         "menu": {
           "addValue": "Add value",
+          "resetValue": "Reset value",
           "remove": "Remove"
         },
-        "confirmationModalRemove": "Do you want to remove <b>{{ categoryName }}</b> category?"
+        "confirmationModalRemove": "Do you want to remove <b>{{ categoryName }}</b> category?",
+        "confirmationModalReset": "Do you want to reset <b>{{ categoryName }}</b> category value?"
       }
     },
 
