--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -146,8 +146,7 @@
       "cancel": "Cancel",
       "add": "Add",
       "valueToAddTitle": "Value to add",
-      "noteTitle": "Note",
-      "noteTooLongError": "Note is too long, max length is 100"
+      "noteTitle": "Note"
     }
   },
 
@@ -188,7 +187,9 @@
 
   "formErrors": {
     "required": "Field is required",
-    "minValue": "Minimal value is {{ minValue }}"
+    "minValue": "Minimal value is {{ minValue }}",
+    "noteTooLong": "Note is too long, max length is 100",
+    "editError": "Value must be different after edit"
   },
 
   "confirmationModal": {
