--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -201,9 +201,19 @@
   },
 
   "languageSwitcher": {
+    "tooltip": "Мова",
     "languages": {
       "english": "Англійська (UK)",
       "ukrainian": "Українська (UA)"
+    }
+  },
+
+  "currencySwitcher": {
+    "tooltip": "Валюта",
+    "currencies": {
+      "hryvnia": "Гривня (UA)",
+      "dollar": "Долар (USA)",
+      "euro": "Євро (EU)"
     }
   },
 
