monthly statistics rework

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -170,7 +170,8 @@
         "scrollLeft": "Scroll left",
         "scrollRight": "Scroll right",
         "resetZoom": "Reset zoom"
-      }
+      },
+      "total": "Total:"
     }
   },
 
