--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -171,7 +171,8 @@
         "scrollLeft": "Прогорнути вліво",
         "scrollRight": "Прогорнути вправо",
         "resetZoom": "Скинути зум"
-      }
+      },
+      "total": "Всього:"
     }
   },
 
