rework lang switcher

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -227,8 +227,8 @@
   "languageSwitcher": {
     "tooltip": "Language",
     "languages": {
-      "english": "English (UK)",
-      "ukrainian": "Ukrainian (UA)"
+      "english": "English",
+      "ukrainian": "Ukrainian"
     }
   },
 
