currency switcher refactor, currency pipe

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -235,9 +235,9 @@
   "currencySwitcher": {
     "tooltip": "Currency",
     "currencies": {
-      "hryvnia": "Hryvnia (UA)",
-      "dollar": "Dollar (USA)",
-      "euro": "Euro (EU)"
+      "hryvnia": "Hryvnia (₴)",
+      "dollar": "Dollar ($)",
+      "euro": "Euro (€)"
     }
   },
 
