--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -236,9 +236,9 @@
   "currencySwitcher": {
     "tooltip": "Валюта",
     "currencies": {
-      "hryvnia": "Гривня (UA)",
-      "dollar": "Долар (USA)",
-      "euro": "Євро (EU)"
+      "hryvnia": "Гривня (₴)",
+      "dollar": "Долар ($)",
+      "euro": "Євро (€)"
     }
   },
 
