--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -31,16 +31,17 @@
         }
       },
       "balance": {
-        "fullBalance": "Повний баланс",
-        "currentBalance": "Поточний баланс",
+        "fullBalance": "Повний баланс (ПвБ)",
+        "currentBalance": "Поточний баланс (ПтБ)",
         "menu": {
           "increase": "Збільшити",
           "decrease": "Зменшити",
           "edit": "Редагувати"
-        }
+        },
+        "tooltip": "Розрахунок балансу:<br>ПвБ = ПтБ + З + ВГ"
       },
       "savings": {
-        "title": "Збереження",
+        "title": "Збереження (З)",
         "menu": {
           "increase": "Збільшити",
           "decrease": "Зменшити",
@@ -48,7 +49,7 @@
         }
       },
       "freeMoney": {
-        "title": "Вільні гроші",
+        "title": "Вільні гроші (ВГ)",
         "menu": {
           "increase": "Збільшити",
           "decrease": "Зменшити",
@@ -215,6 +216,7 @@
   "formErrors": {
     "required": "Обов'язкове для заповнення",
     "minValue": "Мінімальне значення - {{ minValue }}",
+    "maxValue": "Максимальне значення - {{ maxValue }}",
     "noteTooLong": "Примітка занадто велика, макс. довжина - 100",
     "editError": "Значення після редагування має бути іншим"
   },
