Init the window. Basic design.

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -243,6 +243,11 @@
     }
   },
 
+  "lostConnectionMessage": {
+    "message": "It seems like you are offline. Please, check your internet connection.",
+    "button": "Reload"
+  },
+
   "categoryIcons": {
     "housing": "Housing",
     "food": "Food",
