--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -244,6 +244,11 @@
     }
   },
 
+  "lostConnectionMessage": {
+    "message": "Здається, ви офлайн. Перевірте підключення до Інтернету.",
+    "button": "Перезавантажити"
+  },
+
   "categoryIcons": {
     "housing": "Житло",
     "food": "Їжа",
