Added snackbar after reset of the data.

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -209,6 +209,10 @@
       "income": "Income categories were reset successfully!",
       "expense": "Expense categories were reset successfully!",
       "buttonText": "Got it"
+    },
+    "dataResetSnackbar": {
+      "message": "Categories were reset!",
+      "buttonText": "Got it"
     }
   },
 
