--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -210,6 +210,10 @@
       "income": "Категорії доходів було скинуто успішно!",
       "expense": "Категорії витрат було скинуто успішно!",
       "buttonText": "Добре"
+    },
+    "dataResetSnackbar": {
+      "message": "Категорії було скинуто!",
+      "buttonText": "Добре"
     }
   },
 
