text for root values modals, button size, close modal btn

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -78,6 +78,11 @@
         "increase": "Increase",
         "decrease": "Decrease",
         "edit": "Edit"
+      },
+      "subtitle": {
+        "increase": "Increase",
+        "decrease": "Decrease",
+        "edit": "Edit"
       }
     },
 
