--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -78,6 +78,11 @@
         "increase": "Збільшити",
         "decrease": "Зменшити",
         "edit": "Редагувати"
+      },
+      "subtitle": {
+        "increase": "Збільшення",
+        "decrease": "Зменшення",
+        "edit": "Редагування"
       }
     },
 
